@@ -55,10 +55,17 @@ class IRCUnitConfig
     
     defaults = OSX::NSUserDefaults.standardUserDefaults
     langs = defaults['AppleLanguages']
-    if langs && langs[0] && langs[0].to_s == 'ja'
-      @encoding = OSX::NSISO2022JPStringEncoding
-    else
-      @encoding = OSX::NSUTF8StringEncoding
+    if langs && langs[0]
+      @encoding = case langs[0].to_s
+      when 'ja'; OSX::NSISO2022JPStringEncoding
+      when 'ko'; -2147482590
+      when 'zh-Hans'; -2147482063
+      when 'zh-Hant'; -2147481085
+      #when 'ru'; -2147481086
+      else
+        #OSX::NSISOLatin1StringEncoding
+        OSX::NSUTF8StringEncoding
+      end
     end
     
     seed.each do |k,v|
